<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>com.manager</groupId>
        <artifactId>universal-manager</artifactId>
        <version>1.0-SNAPSHOT</version>
    </parent>

    <artifactId>infra-storage-mem</artifactId>

    <properties>
        <maven.compiler.source>25</maven.compiler.source>
        <maven.compiler.target>25</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>

    <dependencies>
        <!-- MODULOS INTERNOS -->
        <dependency>
            <groupId>com.manager</groupId>
            <artifactId>core-health</artifactId>
            <version>${project.version}</version>
            <scope>compile</scope>
        </dependency>

        <dependency>
            <groupId>com.manager</groupId>
            <artifactId>core-audit</artifactId>
            <version>${project.version}</version>
        </dependency>
    </dependencies>

</project>